# SlicerDICOMHosting

./: CMakeLists.txt  readme.md
HostedApplication/: CMakeLists.txt  qSlicerDicomAppLogic.cxx  qSlicerDicomAppLogic.h  qSlicerHostedApplicationModule.cxx  qSlicerHostedApplicationModule.h  qSlicerHostedApplicationModuleWidget.cxx  qSlicerHostedApplicationModuleWidget.h
HostedApplication/Logic/: vtkSlicerHostedApplicationLogic.cxx  vtkSlicerHostedApplicationLogic.h
HostedApplication/Resources/: qSlicerHostedApplicationModule.qrc
HostedApplication/Resources/UI/: qSlicerHostedApplicationFooBarWidget.ui  qSlicerHostedApplicationModuleWidget.ui
HostedApplication/Widgets/: qSlicerHostedApplicationFooBarWidget.cxx  qSlicerHostedApplicationFooBarWidget.h
Scripts/: HostedSlicer.sh
